# cigarette_dispenser_robot

./: CMakeLists.txt  LICENSE  README.md  hand.py  main.launch  package.xml
.github/workflows/: test.yaml
launch/: detection_and_motion.launch.py
scripts/: .publisher_py.py.swp  detection.py  publisher_py.py
src/: motion.cpp  pick_and_move.cpp  subscriber_cpp.cpp
test/: test.bash
