<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cigarette_dispenser_robot</name>
  <version>0.0.0</version>
  <description>programs to control CRANE-X7 package</description>
  <maintainer email="s24c1130pf@s.chibakoudai.jp">Shogo Yamashita</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
